--- a/my-node-app/package.json
+++ b/my-node-app/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/stack": "^7.4.2",
     "bcryptjs": "^3.0.2",
     "build": "^0.1.4",
     "cors": "^2.8.5",
@@ -26,6 +28,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.10",
     "nodemon": "^3.1.10",
+    "path-to-regexp": "^6.2.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
