--- a/my-node-app/package.json
+++ b/my-node-app/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/express-validator": "^2.20.33",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.10",
     "nodemon": "^3.1.10",
