Update index and studentRoute files.

--- a/my-node-app/package.json
+++ b/my-node-app/package.json
@@ -16,13 +16,17 @@
     "@react-navigation/stack": "^7.4.2",
     "bcryptjs": "^3.0.2",
     "build": "^0.1.4",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1"
   },
   "devDependencies": {
+    "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/express-validator": "^2.20.33",
